Update lists at 20250102-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -106,7 +106,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 121.127.37.151;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -258,6 +257,7 @@ allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.117.215.9;
+allow 185.120.16.171;
 allow 185.120.16.176;
 allow 185.129.61.1;
 allow 185.129.61.10;
@@ -317,18 +317,7 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
-allow 185.220.101.100;
-allow 185.220.101.101;
-allow 185.220.101.102;
-allow 185.220.101.103;
-allow 185.220.101.104;
-allow 185.220.101.105;
-allow 185.220.101.106;
-allow 185.220.101.107;
-allow 185.220.101.108;
-allow 185.220.101.109;
 allow 185.220.101.11;
-allow 185.220.101.110;
 allow 185.220.101.12;
 allow 185.220.101.129;
 allow 185.220.101.13;
@@ -476,10 +465,6 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
-allow 185.220.101.96;
-allow 185.220.101.97;
-allow 185.220.101.98;
-allow 185.220.101.99;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -791,7 +776,6 @@ allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -855,6 +839,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1041,6 +1026,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1307,21 +1293,6 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
-allow 2a0b:f4c2:4::100;
-allow 2a0b:f4c2:4::101;
-allow 2a0b:f4c2:4::102;
-allow 2a0b:f4c2:4::103;
-allow 2a0b:f4c2:4::104;
-allow 2a0b:f4c2:4::105;
-allow 2a0b:f4c2:4::106;
-allow 2a0b:f4c2:4::107;
-allow 2a0b:f4c2:4::108;
-allow 2a0b:f4c2:4::109;
-allow 2a0b:f4c2:4::110;
-allow 2a0b:f4c2:4::96;
-allow 2a0b:f4c2:4::97;
-allow 2a0b:f4c2:4::98;
-allow 2a0b:f4c2:4::99;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1545,6 +1516,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
