--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -106,7 +106,6 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.35.245.150;
-deny 118.163.74.160;
 deny 121.127.37.151;
 deny 123.253.35.32;
 deny 125.212.241.131;
@@ -258,6 +257,7 @@ deny 185.112.144.11;
 deny 185.112.146.167;
 deny 185.113.128.30;
 deny 185.117.215.9;
+deny 185.120.16.171;
 deny 185.120.16.176;
 deny 185.129.61.1;
 deny 185.129.61.10;
@@ -317,18 +317,7 @@ deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
-deny 185.220.101.100;
-deny 185.220.101.101;
-deny 185.220.101.102;
-deny 185.220.101.103;
-deny 185.220.101.104;
-deny 185.220.101.105;
-deny 185.220.101.106;
-deny 185.220.101.107;
-deny 185.220.101.108;
-deny 185.220.101.109;
 deny 185.220.101.11;
-deny 185.220.101.110;
 deny 185.220.101.12;
 deny 185.220.101.129;
 deny 185.220.101.13;
@@ -476,10 +465,6 @@ deny 185.220.101.88;
 deny 185.220.101.89;
 deny 185.220.101.9;
 deny 185.220.101.90;
-deny 185.220.101.96;
-deny 185.220.101.97;
-deny 185.220.101.98;
-deny 185.220.101.99;
 deny 185.220.103.4;
 deny 185.220.103.5;
 deny 185.220.103.6;
@@ -791,7 +776,6 @@ deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:9e54::b;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -855,6 +839,7 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -1041,6 +1026,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1307,21 +1293,6 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
-deny 2a0b:f4c2:4::100;
-deny 2a0b:f4c2:4::101;
-deny 2a0b:f4c2:4::102;
-deny 2a0b:f4c2:4::103;
-deny 2a0b:f4c2:4::104;
-deny 2a0b:f4c2:4::105;
-deny 2a0b:f4c2:4::106;
-deny 2a0b:f4c2:4::107;
-deny 2a0b:f4c2:4::108;
-deny 2a0b:f4c2:4::109;
-deny 2a0b:f4c2:4::110;
-deny 2a0b:f4c2:4::96;
-deny 2a0b:f4c2:4::97;
-deny 2a0b:f4c2:4::98;
-deny 2a0b:f4c2:4::99;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
@@ -1545,6 +1516,7 @@ deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 47.243.99.161;
