--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -91,6 +91,7 @@ allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.120.157.137;
 allow 109.169.33.163;
+allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -106,6 +107,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 121.127.37.151;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -283,7 +285,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -317,6 +318,14 @@ allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
+allow 185.220.101.100;
+allow 185.220.101.101;
+allow 185.220.101.102;
+allow 185.220.101.103;
+allow 185.220.101.105;
+allow 185.220.101.107;
+allow 185.220.101.108;
+allow 185.220.101.109;
 allow 185.220.101.11;
 allow 185.220.101.12;
 allow 185.220.101.129;
@@ -465,6 +474,7 @@ allow 185.220.101.88;
 allow 185.220.101.89;
 allow 185.220.101.9;
 allow 185.220.101.90;
+allow 185.220.101.98;
 allow 185.220.103.4;
 allow 185.220.103.5;
 allow 185.220.103.6;
@@ -534,7 +544,6 @@ allow 188.68.49.235;
 allow 188.68.52.231;
 allow 190.103.179.98;
 allow 190.120.229.98;
-allow 190.211.254.97;
 allow 192.108.48.150;
 allow 192.42.116.13;
 allow 192.42.116.14;
@@ -625,6 +634,7 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
+allow 194.233.174.56;
 allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
@@ -776,6 +786,7 @@ allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1293,6 +1304,15 @@ allow 2a0b:f4c2:3::88;
 allow 2a0b:f4c2:3::89;
 allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2::5;
 allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
@@ -1539,7 +1559,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
