--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -105,6 +105,7 @@ deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:9e54::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -526,6 +527,15 @@ deny 2a0b:f4c2:3::88;
 deny 2a0b:f4c2:3::89;
 deny 2a0b:f4c2:3::90;
 deny 2a0b:f4c2::4;
+deny 2a0b:f4c2:4::100;
+deny 2a0b:f4c2:4::101;
+deny 2a0b:f4c2:4::102;
+deny 2a0b:f4c2:4::103;
+deny 2a0b:f4c2:4::105;
+deny 2a0b:f4c2:4::107;
+deny 2a0b:f4c2:4::108;
+deny 2a0b:f4c2:4::109;
+deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2::5;
 deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
