--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -105,6 +105,7 @@ set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -526,6 +527,15 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
