Update lists at 20250102-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,6 +120,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
@@ -285,6 +286,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -312,6 +314,14 @@ allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
 allow 185.220.100.243;
+allow 185.220.100.244;
+allow 185.220.100.245;
+allow 185.220.100.246;
+allow 185.220.100.247;
+allow 185.220.100.248;
+allow 185.220.100.249;
+allow 185.220.100.250;
+allow 185.220.100.251;
 allow 185.220.100.252;
 allow 185.220.100.253;
 allow 185.220.100.254;
@@ -886,6 +896,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -1162,7 +1173,10 @@ allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -1170,6 +1184,11 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1536,7 +1555,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
