--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -120,6 +120,7 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
+deny 141.98.11.62;
 deny 142.171.12.88;
 deny 142.44.133.81;
 deny 142.44.234.69;
@@ -285,6 +286,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -312,6 +314,14 @@ deny 185.220.100.240;
 deny 185.220.100.241;
 deny 185.220.100.242;
 deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
 deny 185.220.100.252;
 deny 185.220.100.253;
 deny 185.220.100.254;
@@ -886,6 +896,7 @@ deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
+deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
 deny 23.184.48.78;
@@ -1162,7 +1173,10 @@ deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
+deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
 deny 2a0b:f4c0:16c:15::1;
@@ -1170,6 +1184,11 @@ deny 2a0b:f4c0:16c:16::1;
 deny 2a0b:f4c0:16c:2::1;
 deny 2a0b:f4c0:16c:3::1;
 deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1536,7 +1555,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
