--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -282,6 +282,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -1076,6 +1077,7 @@ allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1534,7 +1536,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1700,6 +1701,7 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.113.25.189;
+allow 93.113.25.251;
 allow 93.123.12.112;
 allow 93.95.228.125;
 allow 93.95.228.205;
