--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -203,7 +203,6 @@ allow 176.97.113.53;
 allow 176.97.114.202;
 allow 178.162.201.174;
 allow 178.17.170.144;
-allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -282,6 +281,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -686,6 +686,7 @@ allow 198.98.51.249;
 allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
+allow 199.180.118.6;
 allow 199.195.249.214;
 allow 199.195.250.165;
 allow 199.195.251.119;
@@ -842,6 +843,7 @@ allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
+allow 212.95.50.77;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
@@ -892,6 +894,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -918,6 +921,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1035,7 +1039,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
