--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -203,7 +203,6 @@ deny 176.97.113.53;
 deny 176.97.114.202;
 deny 178.162.201.174;
 deny 178.17.170.144;
-deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -282,6 +281,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -686,6 +686,7 @@ deny 198.98.51.249;
 deny 198.98.53.136;
 deny 198.98.54.49;
 deny 198.98.60.90;
+deny 199.180.118.6;
 deny 199.195.249.214;
 deny 199.195.250.165;
 deny 199.195.251.119;
@@ -842,6 +843,7 @@ deny 212.21.66.6;
 deny 212.38.189.186;
 deny 212.69.167.80;
 deny 212.73.134.204;
+deny 212.95.50.77;
 deny 213.252.140.118;
 deny 213.95.149.22;
 deny 216.239.90.19;
@@ -892,6 +894,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
+deny 23.155.8.104;
 deny 23.184.48.78;
 deny 23.94.211.25;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
@@ -918,6 +921,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -1035,7 +1039,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
