--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -281,7 +281,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
@@ -505,6 +504,7 @@ set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
+set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
 set_real_ip_from 185.241.208.81;
 set_real_ip_from 185.241.208.92;
@@ -864,7 +864,6 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
-set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
@@ -1444,12 +1443,16 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
+set_real_ip_from 2a12:a800:2:1:45:141:215:17;
+set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
 set_real_ip_from 2a12:a800:2:1:45:141:215:28;
+set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
+set_real_ip_from 2a12:a800:2:1:45:141:215:80;
 set_real_ip_from 2a12:a800:2:1:45:141:215:81;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
@@ -1503,12 +1506,16 @@ set_real_ip_from 45.141.215.116;
 set_real_ip_from 45.141.215.133;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
+set_real_ip_from 45.141.215.17;
+set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.21;
 set_real_ip_from 45.141.215.28;
+set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
+set_real_ip_from 45.141.215.80;
 set_real_ip_from 45.141.215.81;
 set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
@@ -1571,7 +1578,6 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1721,7 +1727,6 @@ set_real_ip_from 94.177.106.236;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
-set_real_ip_from 94.232.43.221;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.98.8;
 set_real_ip_from 95.128.43.164;
