Update lists at 20250104-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -138,6 +138,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 15.204.238.148;
+allow 152.53.106.7;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -201,8 +202,10 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
 allow 176.97.114.202;
+allow 178.162.175.5;
 allow 178.162.201.174;
 allow 178.17.170.144;
+allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -281,7 +284,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -1039,6 +1041,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
+allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -1166,6 +1169,7 @@ allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
+allow 2a0a:4cc0:40:1b9::cafe;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
@@ -1542,6 +1546,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
