--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -138,6 +138,7 @@ deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
 deny 15.204.238.148;
+deny 152.53.106.7;
 deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
@@ -201,8 +202,10 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.97.113.53;
 deny 176.97.114.202;
+deny 178.162.175.5;
 deny 178.162.201.174;
 deny 178.17.170.144;
+deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -281,7 +284,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -1039,6 +1041,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
+deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
@@ -1166,6 +1169,7 @@ deny 2a09:61c0::20;
 deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
+deny 2a0a:4cc0:40:1b9::cafe;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
@@ -1542,6 +1546,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
