Update lists at 20250105-0600

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -49,6 +49,7 @@ set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.251;
 set_real_ip_from 107.189.13.253;
+set_real_ip_from 107.189.13.254;
 set_real_ip_from 107.189.13.91;
 set_real_ip_from 107.189.14.106;
 set_real_ip_from 107.189.14.4;
@@ -153,6 +154,7 @@ set_real_ip_from 154.213.192.19;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.220.88.93;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 16.16.47.203;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
@@ -191,7 +193,6 @@ set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
-set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
@@ -232,6 +233,7 @@ set_real_ip_from 179.43.167.198;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.166.73.57;
 set_real_ip_from 18.227.140.150;
 set_real_ip_from 184.75.223.235;
 set_real_ip_from 185.100.85.132;
@@ -905,6 +907,7 @@ set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
+set_real_ip_from 2406:da14:9ad:f600:15f4:2da7:c7e5:fab4;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
@@ -1114,7 +1117,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:106:d219::1;
@@ -1139,6 +1141,7 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
+set_real_ip_from 2a05:d016:145:7700:c30:cef9:cf42:527d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1544,6 +1547,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1578,7 +1582,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1610,6 +1613,7 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.168.186.13;
 set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.209.253;
