--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -49,6 +49,7 @@ allow 107.189.12.88;
 allow 107.189.13.180;
 allow 107.189.13.251;
 allow 107.189.13.253;
+allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
@@ -153,6 +154,7 @@ allow 154.213.192.19;
 allow 154.26.159.157;
 allow 158.220.88.93;
 allow 160.119.249.240;
+allow 16.16.47.203;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
@@ -191,7 +193,6 @@ allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
-allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -232,6 +233,7 @@ allow 179.43.167.198;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.166.73.57;
 allow 18.227.140.150;
 allow 184.75.223.235;
 allow 185.100.85.132;
@@ -905,6 +907,7 @@ allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2406:da14:9ad:f600:15f4:2da7:c7e5:fab4;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1114,7 +1117,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
@@ -1139,6 +1141,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:d016:145:7700:c30:cef9:cf42:527d;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1544,6 +1547,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1578,7 +1582,6 @@ allow 5.181.80.107;
 allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.224;
 allow 5.255.100.227;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1610,6 +1613,7 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.168.186.13;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 54.36.209.253;
