--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -283,7 +283,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -307,10 +306,6 @@ allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.208.158.200;
-allow 185.220.100.240;
-allow 185.220.100.241;
-allow 185.220.100.242;
-allow 185.220.100.243;
 allow 185.220.100.244;
 allow 185.220.100.245;
 allow 185.220.100.246;
@@ -708,7 +703,6 @@ allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
-allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:800:1f70::;
@@ -911,6 +905,7 @@ allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.233;
+allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
@@ -1174,10 +1169,6 @@ allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
-allow 2a0b:f4c0:16c:13::1;
-allow 2a0b:f4c0:16c:14::1;
-allow 2a0b:f4c0:16c:15::1;
-allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
@@ -1419,6 +1410,7 @@ allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
+allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
