--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -9,7 +9,6 @@ allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::3348;
-allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:800:1f70::;
@@ -379,10 +378,6 @@ allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
-allow 2a0b:f4c0:16c:13::1;
-allow 2a0b:f4c0:16c:14::1;
-allow 2a0b:f4c0:16c:15::1;
-allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
@@ -624,6 +619,7 @@ allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
+allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
