--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -196,6 +196,7 @@ allow 172.81.131.156;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -306,6 +307,10 @@ allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.208.158.200;
+allow 185.220.100.240;
+allow 185.220.100.241;
+allow 185.220.100.242;
+allow 185.220.100.243;
 allow 185.220.100.244;
 allow 185.220.100.245;
 allow 185.220.100.246;
@@ -1164,10 +1169,15 @@ allow 2a0a:4cc0:40:1b9::cafe;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
 allow 2a0b:4142:7ca::2;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
 allow 2a0b:f4c0:16c:12::1;
+allow 2a0b:f4c0:16c:13::1;
+allow 2a0b:f4c0:16c:14::1;
+allow 2a0b:f4c0:16c:15::1;
+allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
@@ -1534,7 +1544,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1569,7 +1578,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
