--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -115,7 +115,6 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
-allow 130.193.15.79;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -193,6 +192,7 @@ allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
+allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -203,6 +203,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
 allow 176.97.114.202;
+allow 177.149.130.78;
 allow 178.162.175.5;
 allow 178.162.201.174;
 allow 178.17.170.144;
@@ -219,7 +220,6 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.99;
-allow 179.35.4.151;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -284,6 +284,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -644,7 +645,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.43.72.218;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -1035,6 +1035,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1053,6 +1054,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1544,6 +1546,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1559,6 +1562,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1668,6 +1672,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
