Update lists at 20250109-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -114,7 +114,6 @@ deny 130.193.10.21;
 deny 130.193.15.186;
 deny 130.193.15.79;
 deny 136.244.111.163;
-deny 138.124.50.136;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
@@ -209,7 +208,6 @@ deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
-deny 178.17.174.164;
 deny 178.175.134.93;
 deny 178.175.148.209;
 deny 178.175.148.246;
@@ -230,7 +228,6 @@ deny 179.43.159.199;
 deny 179.43.159.200;
 deny 179.43.159.201;
 deny 179.43.159.78;
-deny 179.43.167.198;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
@@ -892,6 +889,7 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
+deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
@@ -1039,7 +1037,6 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
-deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
@@ -1051,15 +1048,13 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:e5c0:33ba::2;
-deny 2a01:e5c0:506a::2;
-deny 2a01:e5c0:5130::2;
-deny 2a01:e5c0:5171::2;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:6b40:2000:15d9::1;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -1526,7 +1521,6 @@ deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.148.10.169;
-deny 45.150.32.250;
 deny 45.154.98.26;
 deny 45.61.185.172;
 deny 45.61.186.203;
@@ -1644,6 +1638,7 @@ deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
 deny 78.142.18.219;
+deny 79.132.143.85;
 deny 80.210.78.252;
 deny 80.211.204.89;
 deny 80.241.60.207;
@@ -1687,7 +1682,6 @@ deny 89.147.110.118;
 deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
-deny 89.169.55.174;
 deny 89.187.143.31;
 deny 89.221.215.139;
 deny 89.221.217.206;
