--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -114,7 +114,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 136.244.111.163;
-set_real_ip_from 138.124.50.136;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -209,7 +208,6 @@ set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
-set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.134.93;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
@@ -230,7 +228,6 @@ set_real_ip_from 179.43.159.199;
 set_real_ip_from 179.43.159.200;
 set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
-set_real_ip_from 179.43.167.198;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
@@ -892,6 +889,7 @@ set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
@@ -1039,7 +1037,6 @@ set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
-set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1051,15 +1048,13 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:e5c0:33ba::2;
-set_real_ip_from 2a01:e5c0:506a::2;
-set_real_ip_from 2a01:e5c0:5130::2;
-set_real_ip_from 2a01:e5c0:5171::2;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:6b40:2000:15d9::1;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
@@ -1526,7 +1521,6 @@ set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.169;
-set_real_ip_from 45.150.32.250;
 set_real_ip_from 45.154.98.26;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
@@ -1644,6 +1638,7 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
+set_real_ip_from 79.132.143.85;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.211.204.89;
 set_real_ip_from 80.241.60.207;
@@ -1687,7 +1682,6 @@ set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
-set_real_ip_from 89.169.55.174;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.221.215.139;
 set_real_ip_from 89.221.217.206;
