--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -114,7 +114,6 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 136.244.111.163;
-allow 138.124.50.136;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -209,7 +208,6 @@ allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
-allow 178.17.174.164;
 allow 178.175.134.93;
 allow 178.175.148.209;
 allow 178.175.148.246;
@@ -230,7 +228,6 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
-allow 179.43.167.198;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -892,6 +889,7 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1039,7 +1037,6 @@ allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
-allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1051,15 +1048,13 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:e5c0:33ba::2;
-allow 2a01:e5c0:506a::2;
-allow 2a01:e5c0:5130::2;
-allow 2a01:e5c0:5171::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6b40:2000:15d9::1;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1526,7 +1521,6 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.169;
-allow 45.150.32.250;
 allow 45.154.98.26;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1644,6 +1638,7 @@ allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
+allow 79.132.143.85;
 allow 80.210.78.252;
 allow 80.211.204.89;
 allow 80.241.60.207;
@@ -1687,7 +1682,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.169.55.174;
 allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
