--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -246,7 +246,6 @@ allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
-allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -258,15 +257,13 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:e5c0:33ba::2;
-allow 2a01:e5c0:506a::2;
-allow 2a01:e5c0:5130::2;
-allow 2a01:e5c0:5171::2;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6b40:2000:15d9::1;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
