--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -208,6 +208,7 @@ allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
+allow 178.17.174.164;
 allow 178.175.134.93;
 allow 178.175.148.209;
 allow 178.175.148.246;
@@ -540,7 +541,6 @@ allow 185.40.4.95;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
-allow 185.59.100.196;
 allow 185.67.82.114;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -1037,6 +1037,7 @@ allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
+allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1047,9 +1048,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a01:e5c0:33ba::2;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1555,7 +1554,6 @@ allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.101.107.151;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1573,7 +1571,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.102.89;
@@ -1648,14 +1645,12 @@ allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.92;
 allow 81.16.33.42;
-allow 81.17.18.107;
 allow 81.17.28.95;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
 allow 82.68.49.227;
-allow 83.147.216.197;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
