--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -208,6 +208,7 @@ deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
+deny 178.17.174.164;
 deny 178.175.134.93;
 deny 178.175.148.209;
 deny 178.175.148.246;
@@ -540,7 +541,6 @@ deny 185.40.4.95;
 deny 185.42.170.203;
 deny 185.56.171.94;
 deny 185.56.83.83;
-deny 185.59.100.196;
 deny 185.67.82.114;
 deny 185.7.33.146;
 deny 185.82.219.109;
@@ -1037,6 +1037,7 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
+deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
@@ -1047,9 +1048,7 @@ deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
-deny 2a01:e5c0:33ba::2;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1555,7 +1554,6 @@ deny 45.95.169.229;
 deny 45.95.169.255;
 deny 46.101.107.151;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 47.243.99.161;
@@ -1573,7 +1571,6 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.102.89;
@@ -1648,14 +1645,12 @@ deny 80.82.78.14;
 deny 80.94.92.106;
 deny 80.94.92.92;
 deny 81.16.33.42;
-deny 81.17.18.107;
 deny 81.17.28.95;
 deny 8.218.9.41;
 deny 82.221.128.191;
 deny 82.221.131.5;
 deny 82.221.139.190;
 deny 82.68.49.227;
-deny 83.147.216.197;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
