--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -246,6 +246,7 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
+deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
@@ -256,9 +257,7 @@ deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
-deny 2a01:e5c0:33ba::2;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
