--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -86,7 +86,6 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
 allow 109.120.157.137;
-allow 109.123.251.93;
 allow 109.169.33.163;
 allow 109.228.160.26;
 allow 109.69.67.17;
@@ -152,7 +151,6 @@ allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.213.192.19;
 allow 154.26.159.157;
-allow 158.220.88.93;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -674,7 +672,6 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.58.107.53;
-allow 198.7.112.99;
 allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.48.35;
@@ -824,7 +821,6 @@ allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
 allow 206.166.251.208;
-allow 206.188.197.77;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -919,7 +915,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
-allow 2602:fc24:10:dbf5::1;
+allow 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
@@ -1060,8 +1056,6 @@ allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
 allow 2a02:c204:2220:8710::1;
-allow 2a02:c204:2237:8816::1;
-allow 2a02:c206:2237:8831::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1520,6 +1514,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
 allow 45.61.185.172;
@@ -1538,6 +1533,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1572,6 +1568,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.102.89;
